<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="16dp"
    card_view:cardElevation="2dp"
    card_view:cardCornerRadius="8dp"
    android:backgroundTint="@color/pink">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewName"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/age"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewAge"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/phone_no"
            android:textColor="@color/magentapink"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#00BF63"
            android:text="@string/view_location"
            android:textColor="@color/ivory" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/magentapink"
            android:text="@string/delete"
            android:textColor="@color/ivory" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
