<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settings_background"
    tools:context=".dashboard.SettingsActivity">

    <Button
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/baseline_arrow_back_24"
        android:backgroundTint="@color/magentapink"
        android:contentDescription="@string/app_name"
        android:onClick="onBackButtonClick"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="468dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/notifications_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="304dp"
        android:orientation="horizontal"
        android:padding="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/enable_notification"
            android:textColor="@color/ivory"
            android:textSize="24sp" />

        <ToggleButton
            android:id="@+id/notifications_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ivory"
            android:scaleX="1.5"
            android:scaleY="1.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifications_section">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/enable_dark_theme"
            android:textColor="@color/ivory"
            android:textSize="24sp" />

        <ToggleButton
            android:id="@+id/theme_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ivory"
            android:scaleX="1.5"
            android:scaleY="1.5" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
