<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".dashboard.dailytips.DailyTipsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tip_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_title"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tip_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tip_title"
                android:layout_marginTop="8dp"
                android:text="@string/tip_content"
                android:textColor="@color/magentapink"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/tip_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/tip_content"
                android:layout_marginTop="50dp"
                android:scaleType="centerCrop" />

        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/baseline_arrow_back_24"
        android:backgroundTint="@color/magentapink"
        android:contentDescription="@string/app_name"
        android:onClick="onBackButtonClick"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>
