<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/magentapink">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="Add Medicine"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="24sp"/>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/pink">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/medicine_name"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/add_med_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:hint="@string/paracetamol"
                    android:textColorHint="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/quantity"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/add_med_qty"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/_10"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/add_med_time"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/ivory"
                    android:fontFamily="sans-serif"
                    android:inputType="time"
                    android:text="@string/select"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:iconPadding="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="Repeat :"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/repeat"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/magentapink"
                    android:fontFamily="sans-serif"
                    android:text="REPEAT"
                    android:textColor="@color/ivory"
                    android:textSize="18sp"
                    app:iconPadding="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:minWidth="48dp"
                    android:text="S"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/monday"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:minWidth="48dp"
                    android:text="M"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:minWidth="48dp"
                    android:text="T"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:minWidth="48dp"
                    android:text="W"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:minWidth="48dp"
                    android:text="T"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/friday"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:minWidth="48dp"
                    android:text="F"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="S"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
