<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".useractivity.LoginActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="WELCOME TO AYUCARE"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate_your_daily_life_with_love_and_care"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/login"
        android:textColor="@color/ivory"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445" />

    <EditText
        android:id="@+id/editTextLoginUsername"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@drawable/input_background"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="70dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/ivory"
        android:textColorHint="@color/ivory"
        android:textColorLink="@color/ivory"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editTextLoginUsername"
        app:layout_constraintEnd_toEndOf="@+id/editTextLoginUsername"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="@+id/editTextLoginUsername"
        app:layout_constraintTop_toTopOf="@+id/editTextLoginUsername"
        app:srcCompat="@drawable/baseline_person_24"
        app:tint="@color/white"/>

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@drawable/input_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="70dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/ivory"
        android:textColorHighlight="@color/ivory"
        android:textColorHint="@color/ivory"
        android:textColorLink="@color/ivory"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editTextLoginPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextLoginPassword"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="@+id/editTextLoginPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextLoginPassword"
        app:srcCompat="@drawable/baseline_password_24"
        app:tint="@color/ivory"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/ivory"
        android:fontFamily="sans-serif-black"
        android:text="LOGIN"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

    <TextView
        android:id="@+id/textViewNewUser"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/new_user_register_here"
        android:textColor="@color/ivory"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881" />

</androidx.constraintlayout.widget.ConstraintLayout>